<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2018 Vaisakh J Nair
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">FugenApp</string>
    <string name="action_bar_text">FUGENIZ 8</string>
    <string name="search_hint">SEARCH</string>
    <string name="cat_flagship">FLAGSHIP\nEVENTS</string>
    <string name="cat_eyecatchers">EYE\nCATCHERS</string>
    <string name="cat_technical">TECHNICAL\nEVENTS</string>
    <string name="cat_fun">FUN\nEVENTS</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">15 Feb</string>
    <string name="event_desc">The quick brown fox jumps over the lazy dog</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="settings_caps">SETTINGS</string>
    <string name="about_caps">ABOUT</string>
    <string name="share_quote">Get the source code!</string>
    <string name="github_link">https://github.com/slyidiot/FugenApp</string>
    <string name="made_with">Made With</string>
    <string name="by_3rd_year_cse">By 3rd Year CSE</string>
    <string name="about_sngce">Sree Narayana Gurukulam College of Engineering is a new age, multi-disciplinary institute offering a portfolio of courses in Engineering, Computer Applications and Management streams. Ensuring the right blend of academic rigor and business focus of the industry, the institution has transformed into a trend setter in professional education since 2002. SNGCE prides itself on creating a congenial academic environment, conducive to learning on the strength of most modern infrastructural facilities provided by the management and a highly motivated and competent team of faculty constantly endeavouring to mould world-class professionals of the future</string>
    <string name="sng">SNGCE</string>
    <string name="innovations_redefined">INNOVATIONS REDEFINED</string>
    <string name="trailer">WATCH TRAILER</string>
    <string name="browse_events">BROWSE EVENTS</string>
    <string name="youtube_video_id">L27srt1r16A</string>
</resources>
