<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.fugenapp.ui.view.FadingImageView
        android:id="@+id/slideshow_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.fugenapp.ui.activities.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_padding"
            android:layout_marginStart="@dimen/top_padding"
            android:layout_marginTop="@dimen/top_padding">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/anim_view_one"
                android:layout_width="150dp"
                android:layout_height="50dp"
                app:lottie_autoPlay="true"
                app:lottie_fileName="animations/hashtag.json"
                app:lottie_loop="true" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_padding"
            android:layout_marginStart="@dimen/default_padding"
            android:fontFamily="@font/roboto_black"
            android:text="@string/innovations_redefined"
            android:textColor="?attr/defaultTextColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/top_padding"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="22dp"
                android:layout_marginStart="22dp"
                android:onClick="showTrailer"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bg"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/trailer"
                    android:textColor="?attr/colorPrimary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="22dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="20dp"
                android:onClick="showEvents"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bg"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/browse_events"
                    android:textColor="?attr/colorPrimary" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
